src/objects/EnrollmentTeams__c.object
<CustomObject>
    <description>Trial for EC assignment</description>
    <fields>
        <fullName>CollegeTeam__c</fullName>
        <label>College Team</label>
        <picklist>
            <picklistValues>
                <fullName>Undergrad Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Prelicensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College El Ed/SocSci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College Math/Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College MEd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramMarketingName__c</fullName>
        <label>Program Marketing Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Enrollment Teams</relationshipLabel>
        <relationshipName>EnrollmentTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrollment Teams</label>
    <nameField>
        <label>Enrollment Teams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>